@@ -70,6 +70,7 @@
     * FIX: handle ldap logins with ',' in distinguished name
     * FIX: quote HTML variable names, fixes potential JS injection
     * Option dials (refresh, number of columns) now turnable by mouse wheel
+    * FIX: Sidebar not raising exceptions on configured but not available snapins
     
     WATO:
     * FIX: Fixed generated manual check definitions for checks without items
